# traditional_mongolian_gpt

./: .gitattributes  .gitignore  README.md  pretrain.py  pyproject.toml  render.yaml  requirements-test.txt  requirements.txt  run_web_server.sh  setup_venv.sh
artifacts/traditional_mongolian_bpe/: merges.txt  tokenizer.json  vocab.json
src/: utils.py
src/data/: data_loader.py  tokenizer_utils.py
src/model/: gpt.py
src/mongol_ml_autocomplete/: __init__.py  autocomplete.py  font_utils.py
tests/: test_checkpoint.py  test_tokenizer_utils.py
web/: FEATURE_TODO.md  README.md  app.js  index.html  keyboard-layout.json  layout-editor.html  layout-editor.js  requirements.txt  server.py  styles.css  tokens.js
web/assets/font/: .gitkeep
